Fix LazyMediaSource.